@@ -69,6 +69,19 @@ piwik_log(piwik_action_name, piwik_idsite, piwik_url);
 <tr>
 <td><a href="contact.html">Contact &amp; Links</a></td>
 </tr>
+<tr height="30">
+<td></td>
+</tr>
+<tr>
+<td><script type="text/javascript">
+<!--										
+google_ad_client = "pub-6019677758660683";
+/* banner_links_skyscraper */
+google_ad_slot = "3650627737";
+google_ad_width = 120;
+google_ad_height = 600;
+//--></script><script src="http://pagead2.googlesyndication.com/pagead/show_ads.js" type="text/javascript"></script></td>
+</tr>
 </table>
 </td><td>
 <h1 align="center">
@@ -97,7 +110,7 @@ UCDetector: Unnecessary Code Detector</h1>
 		
 <li>
 			
-<a href="http://sourceforge.net/project/showfiles.php?group_id=219599&package_id=265013">Downloads</a>
+<a href="https://sourceforge.net/projects/ucdetector/files/">Downloads</a>
 		
 </li>
 		
@@ -158,7 +171,7 @@ UCDetector: Unnecessary Code Detector</h1>
 <hr>
 <table summary="footer" width="100%">
 <tr>
-<td valign="middle" align="left">Last Update: 2009-07-20</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
+<td valign="middle" align="left">Last Update: 2009-10-26</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
 </tr>
 </table>
 <hr>
