@@ -69,6 +69,19 @@ piwik_log(piwik_action_name, piwik_idsite, piwik_url);
 <tr>
 <td><a href="contact.html">Contact &amp; Links</a></td>
 </tr>
+<tr height="30">
+<td></td>
+</tr>
+<tr>
+<td><script type="text/javascript">
+<!--										
+google_ad_client = "pub-6019677758660683";
+/* banner_links_skyscraper */
+google_ad_slot = "3650627737";
+google_ad_width = 120;
+google_ad_height = 600;
+//--></script><script src="http://pagead2.googlesyndication.com/pagead/show_ads.js" type="text/javascript"></script></td>
+</tr>
 </table>
 </td><td>
 <h1 align="center">
@@ -90,7 +103,7 @@ UCDetector: Unnecessary Code Detector</h1>
 
 				
 <p>
-				- Import all UCDetector projects using this 
+				- Import all UCDetector projects using this
 				<a href="http://ucdetector.svn.sourceforge.net/viewvc/ucdetector/trunk/org.ucdetector/doc/UCDetector.psf">eclipse project set</a>.
 				</p>
 				Or:
@@ -106,7 +119,7 @@ svn co https://ucdetector.svn.sourceforge.net/svnroot/ucdetector/trunk/org.ucdet
 <h3>Create custom marker</h3>
 				
 <p>Create your own problem markers! I already provided example code for</p>
-				
+
 				
 <ul>
 					
@@ -122,7 +135,7 @@ svn co https://ucdetector.svn.sourceforge.net/svnroot/ucdetector/trunk/org.ucdet
 				
 <p>This code is  easy to extend. Look at this example:</p>
 
-					
+
 
 <pre>
 <font color="#000000">  <font color="#006699"><strong>protected</strong></font> <font color="#0099ff"><strong>void</strong></font> <font color="#9966ff">handleType</font><font color="#000000"><strong>(</strong></font>IType type<font color="#000000"><strong>)</strong></font> <font color="#006699"><strong>throws</strong></font> CoreException <font color="#000000"><strong>{</strong></font>
@@ -145,12 +158,12 @@ svn co https://ucdetector.svn.sourceforge.net/svnroot/ucdetector/trunk/org.ucdet
 <li>Create plugin running ant build file in Eclipse: <code>org.ucdetector.additional/doc/build.xml</code>
 </li>
 					
-<li>Put create plugins in <code>ECLIPSE_HOME/plugins</code> directory</li>
+<li>Put create plugins in <code>ECLIPSE_HOME/dropins</code> directory</li>
 					
 <li>Restart Eclipse</li>
 				
 </ul>
-				
+
 				
 <a href="mailto:feedback@ucdetector.org">E-Mail </a> me your detection example!
            </td>
@@ -159,7 +172,7 @@ svn co https://ucdetector.svn.sourceforge.net/svnroot/ucdetector/trunk/org.ucdet
 			</td>
 		
 </tr>
-		
+
 		
 <tr valign="top">
 		  
@@ -198,7 +211,7 @@ svn co https://ucdetector.svn.sourceforge.net/svnroot/ucdetector/trunk/org.ucdet
 <hr>
 <table summary="footer" width="100%">
 <tr>
-<td valign="middle" align="left">Last Update: 2009-07-20</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
+<td valign="middle" align="left">Last Update: 2009-10-26</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
 </tr>
 </table>
 <hr>
