@@ -69,6 +69,19 @@ piwik_log(piwik_action_name, piwik_idsite, piwik_url);
 <tr>
 <td><a href="contact.html">Contact &amp; Links</a></td>
 </tr>
+<tr height="30">
+<td></td>
+</tr>
+<tr>
+<td><script type="text/javascript">
+<!--										
+google_ad_client = "pub-6019677758660683";
+/* banner_links_skyscraper */
+google_ad_slot = "3650627737";
+google_ad_width = 120;
+google_ad_height = 600;
+//--></script><script src="http://pagead2.googlesyndication.com/pagead/show_ads.js" type="text/javascript"></script></td>
+</tr>
 </table>
 </td><td>
 <h1 align="center">
@@ -86,6 +99,8 @@ UCDetector: Unnecessary Code Detector</h1>
 <!-- left ================================================== -->
 			
 <td>
+
+<a name="about"></a>
 
 <h3>About</h3>
 <!-- ======================================================================= -->
@@ -112,8 +127,8 @@ markers for the following problems, which appear in the eclipse problem view:
 <p>
 UCDetector also finds cyclic dependencies between classes in your code.
 This cycle classes are shown in s special cycle view.
-</p>			
-			
+</p>
+
 			
 </td>
 <!-- right ================================================== -->
@@ -128,7 +143,8 @@ This cycle classes are shown in s special cycle view.
 <!-- left ================================================== -->
 			
 <td>
-			
+
+<a name="get"></a>
 
 <h3>Get UCDetector</h3>
 UCDetector needs Eclipse &gt;= 3.3 and java &gt;= 5.0
@@ -142,7 +158,7 @@ UCDetector needs Eclipse &gt;= 3.3 and java &gt;= 5.0
 <li>Download <a href="http://sourceforge.net/project/showfiles.php?group_id=219599">org.ucdetector_*.jar</a>
 </li>
   
-<li>Put the jar into <code>ECLIPSE_HOME/plugins</code> directory</li>
+<li>Put the jar into <code>ECLIPSE_HOME/dropins</code> directory</li>
   
 <li>Restart Eclipse</li>
 
@@ -156,8 +172,8 @@ UCDetector needs Eclipse &gt;= 3.3 and java &gt;= 5.0
 
 <code>http://ucdetector.sourceforge.net/update</code>
 
-			
-			
+
+<a name="quick"></a>
 
 <h3>Quick start</h3>
 <!-- ======================================================================= -->
@@ -192,6 +208,8 @@ Instead of clicking Shift+Ctrl+G
 </ol>
 
 
+
+<a name="change"></a>
 
 <h3>Really want to change code?</h3>
 <!-- ======================================================================= -->
@@ -241,7 +259,7 @@ you want to change.
 			
 <td>
 
-
+<a name="quickfix"></a>
 
 <h3>Change code, use QuickFixes!</h3>
 <!-- ======================================================================= -->
@@ -261,7 +279,7 @@ your code. Click on the marker to see QuickFixes's to change code:
 <li>Use <font color="#006699"><strong>final</strong></font>
 </li>
 
-</ul>	
+</ul>
 It is possible to change several problems at once using quick fix dialog.
 			</td>
 <!-- right ================================================== -->
@@ -279,9 +297,14 @@ It is possible to change several problems at once using quick fix dialog.
 			
 <td>
 
+<a name="ignore"></a>
+
 <h3>Ignore code</h3>
 <!-- ======================================================================= -->
-Use // NO_UCD comment for lines, which should be ignored:
+
+
+<h4>// NO_UCD</h4>
+
 <pre>
 <span class="c4">/**
  * Class is only used by reflection.
@@ -291,17 +314,37 @@ Use // NO_UCD comment for lines, which should be ignored:
 <span class="c2"><strong>public</strong></span> <span class="c5"><strong>class</strong></span> BeanExample <span class="c6"><strong>{</strong></span> <span class="c7">// <strong>NO_UCD</strong></span>
 </pre>
 
-Or use @SuppressWarnings("ucd") annotation for code, which should be ignored:
+
+<h4>@SuppressWarnings("ucd")</h4>
+
 <pre>
 <span class="c4">/**
  * Class is only used by reflection.
  * Add a <strong>@SuppressWarnings("ucd")</strong> annotation.
- * This line will be ignored by UCDetector.
+ * This class/method/field will be ignored by UCDetector.
  */</span>
 <strong>@SuppressWarnings("ucd")</strong>
 <span class="c2"><strong>public</strong></span> <span class="c5"><strong>class</strong></span> BeanExample <span class="c6"><strong>{</strong></span>
 </pre>
 
+
+<h4>@UsedBy("reflection")</h4>
+I don't like this one, but users asked for it:<br>
+If you want to "polute" your code, you can use the <code>@org.ucdetector.util.UsedBy</code>
+annotation located inside ucdetector-annotations.jar which is inside org.ucdetector.xxx.jar.
+<pre>
+<span class="c4">/**
+ * Class is only used by reflection.
+ * Add a <strong>@SuppressWarnings("ucd")</strong> annotation.
+ * This class/method/field will be ignored by UCDetector.
+ */</span>
+<strong>@UsedBy("reflection")</strong>
+<span class="c2"><strong>public</strong></span> <span class="c5"><strong>class</strong></span> BeanExample <span class="c6"><strong>{</strong></span>
+</pre>
+
+
+<h4>Other annotations</h4>
+List code to be ignored containing annotations in preferences/filter.
 
 </td>
 <!-- right ================================================== -->
@@ -333,7 +376,7 @@ Or use @SuppressWarnings("ucd") annotation for code, which should be ignored:
 <hr>
 <table summary="footer" width="100%">
 <tr>
-<td valign="middle" align="left">Last Update: 2009-07-20</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
+<td valign="middle" align="left">Last Update: 2009-10-26</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
 </tr>
 </table>
 <hr>
