@@ -69,6 +69,19 @@ piwik_log(piwik_action_name, piwik_idsite, piwik_url);
 <tr>
 <td><a href="contact.html">Contact &amp; Links</a></td>
 </tr>
+<tr height="30">
+<td></td>
+</tr>
+<tr>
+<td><script type="text/javascript">
+<!--										
+google_ad_client = "pub-6019677758660683";
+/* banner_links_skyscraper */
+google_ad_slot = "3650627737";
+google_ad_width = 120;
+google_ad_height = 600;
+//--></script><script src="http://pagead2.googlesyndication.com/pagead/show_ads.js" type="text/javascript"></script></td>
+</tr>
 </table>
 </td><td>
 <h1 align="center">
@@ -85,12 +98,14 @@ UCDetector: Unnecessary Code Detector</h1>
 <tr>
 			
 <td>
+			<a name="ant"></a>
 				
-<h3>Run UCDetector with ANT (experimental!)</h3>
+<h3>Run UCDetector with ANT</h3>
 				
 <p>
-It is possible to call UCDetector from ANT and run it in headless mode
-(no user interface). This may be interesting, for build manager to create the html reports.
+It is possible to run UCDetector in headless mode (no user interface) by calling
+<a href="http://ant.apache.org/index.html">Apache Ant</a>.
+This may be interesting, for build manager to create the html reports.
 </p>
 				
 <p>
@@ -112,6 +127,8 @@ Unzip folder <code>org.ucdetector_x.y.z.jar/ant</code>, check README.txt
 <tr>
 			
 <td>
+			
+        <a name="cycle"></a>
 				
 <h3>
 					
@@ -138,6 +155,7 @@ cycle tree.</p>
 <tr>
 			
 <td>
+			<a name="count"></a>
 				
 <h3>
 					
@@ -158,7 +176,7 @@ cycle tree.</p>
 <tr>
 			
 <td>
-				
+				<a name="clean"></a>
 				
 <h3>
 					
@@ -183,7 +201,7 @@ the markers and select:<br>
 <hr>
 <table summary="footer" width="100%">
 <tr>
-<td valign="middle" align="left">Last Update: 2009-07-20</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
+<td valign="middle" align="left">Last Update: 2009-10-26</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
 </tr>
 </table>
 <hr>
