@@ -69,6 +69,19 @@ piwik_log(piwik_action_name, piwik_idsite, piwik_url);
 <tr>
 <td><a href="contact.html">Contact &amp; Links</a></td>
 </tr>
+<tr height="30">
+<td></td>
+</tr>
+<tr>
+<td><script type="text/javascript">
+<!--										
+google_ad_client = "pub-6019677758660683";
+/* banner_links_skyscraper */
+google_ad_slot = "3650627737";
+google_ad_width = 120;
+google_ad_height = 600;
+//--></script><script src="http://pagead2.googlesyndication.com/pagead/show_ads.js" type="text/javascript"></script></td>
+</tr>
 </table>
 </td><td>
 <h1 align="center">
@@ -89,13 +102,41 @@ UCDetector: Unnecessary Code Detector</h1>
 		<li></li>
 	</ul>
 -->
+  <!-- ===================================================================== -->
+	
+<h3>1.3.0 from 2009-10-25:</h3>
+  <!-- ===================================================================== -->
+	
+<p>New features:</p>
+	
+<ul>
+		
+<li>New preference: 'ignore Classes containing string'</li>
+		
+<li>[ 2832790 ] Custom annotation filter</li>
+	
+</ul>
+	
+<p>Bugfixes:</p>
+	
+<ul>
+		
+<li>[ 2826205 ] Can't make interface methods final</li>
+		
+<li>[ 2826216 ] Unused interface methods are not detected</li>
+		
+<li>[ 2804064, 2865051, 2743908 ] Access to enclosing type - make 2743908 configurable: Created new Checkbox</li>
+		
+<li>[ 2864046 ] Ignore public methods of non-public classes</li>
+		
+<li>[ 2864967 ] Ignore references for recursive methods</li>
+	
+</ul>
 
   <!-- ===================================================================== -->
 	
 <h3>1.2.0 from 2009-07-21:</h3>
   <!-- ===================================================================== -->
-	
-<h3></h3>
 	
 <p>New features:</p>
 	
@@ -322,7 +363,7 @@ UCDetector: Unnecessary Code Detector</h1>
 <hr>
 <table summary="footer" width="100%">
 <tr>
-<td valign="middle" align="left">Last Update: 2009-07-20</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
+<td valign="middle" align="left">Last Update: 2009-10-26</td><td valign="middle" align="right">Copyright &copy; 2009, by <a href="mailto:feedback@ucdetector.org">J&ouml;rg Spieler</a></td>
 </tr>
 </table>
 <hr>
