@@ -1,4 +1,10 @@
-UCDetector 1.3.0 from 2009-:
+UCDetector 1.4.0 from :
+Bugfixes:
+
+New features:
+
+// -----------------------------------------------------------------------------
+UCDetector 1.3.0 from 2009-10-25:
 Bugfixes:
  - [ 2826205 ] Can't make interface methods final
  - [ 2826216 ] Unused interface methods are not detected
